<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_task"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.paradicedev.dailyst.AddTaskActivity"
    android:background="@drawable/backrepeat" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/round_corners"
        android:backgroundTint="@android:color/white"
        android:alpha="0.3" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/taskdetails_title_editText"
            android:inputType="textCapSentences|textMultiLine"
            android:hint="@string/task_title_hint" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:inputType="textCapSentences|textMultiLine"
            android:gravity="top"
            android:ems="10"
            android:layout_marginTop="15dp"
            android:id="@+id/taskdetails_details_editText"
            android:layout_below="@id/taskdetails_title_editText"
            android:hint="@string/task_details_hint" />

        <TextView
            android:id="@+id/taskdetails_deadline_label_textview"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_below="@id/taskdetails_details_editText"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:text="@string/task_deadline_label"
            />

        <TextView
            android:id="@+id/taskdetails_deadline_textview"
            android:layout_width="400dp"
            android:layout_height="40dp"
            android:layout_below="@id/taskdetails_details_editText"
            android:layout_toRightOf="@+id/taskdetails_deadline_label_textview"
            android:layout_marginRight="100dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:textSize="8pt"
            />

        <Button
            android:id="@+id/taskdetails_set_deadline_task_button"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_below="@id/taskdetails_details_editText"
            android:layout_marginTop="10dp"
            android:text="@string/set_deadline_button_label"
            android:textSize="5pt" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true" >

            <Button
                android:id="@+id/taskdetails_keep_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/keep_button_label"
                />

            <Button
                android:id="@+id/taskdetails_done_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/done_button_label"
                android:backgroundTint="#2E7D32"
                />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>